--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/jazzy/multires_image
-	previous = 
-	base = 803b5bf7
+	previous = 803b5bf7
+	base = c25e7e61
 	trim = 
 	trimbase = 
