--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/jazzy/mapviz_plugins
-	previous = 
-	base = d55ee0ee
+	previous = d55ee0ee
+	base = 268130a8
 	trim = 
 	trimbase = 
