--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/jazzy/mapviz
-	previous = 
-	base = 2ce9c613
+	previous = 2ce9c613
+	base = 04385376
 	trim = 
 	trimbase = 
