--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/jazzy/mapviz_interfaces
-	previous = 
-	base = 0ae70a3a
+	previous = 0ae70a3a
+	base = e4c6a96b
 	trim = 
 	trimbase = 
