--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/jazzy/tile_map
-	previous = 
-	base = a14f13f2
+	previous = a14f13f2
+	base = 9706902c
 	trim = 
 	trimbase = 
